k8s/mysql-platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: mysqldb-volume
      volumes:
        - name: mysqldb-volume
          persistentVolumeClaim:
            claimName: mysql-claim1
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
