k8s/platform-node-port-srvice.yaml
apiVersion: v1
kind: Service
metadata: 
  name: platformnodeport-service
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
