k8s/rabbit-mq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 15672
              name: rbt-mgmt-port
            - containerPort: 5672
              name: rabbitmq-port
            
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  selector:
    app: rabbitmq
  ports:
  - name: rabbitmq-port
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: rbt-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: rabbitmq-port
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: rbt-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
