k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  # namespace: ingress-nginx
  annotations:
  #   # kubernetes.io/ingress.class: nginx
    ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
  #   # ingress.kubernetes.io/rewrite-target:/api/platforms
  #   # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: onikolos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-srv
                port:
                  number: 80
          - path: /api/command/platforms
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-srv
                port:
                  number: 80
